# genovisio_mongo_utils

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: main.yml  release-please.yml
genovisio_utils/: __init__.py  mongo.py
tests/: test_insert_into_mongodb.py
